--- a/src/talkMenue/talkMenue.scss
+++ b/src/talkMenue/talkMenue.scss
@@ -12,7 +12,16 @@
   .talk-header {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+
+    .talk-logo {
+      h3 {
+        font-family: 'Poppins', sans-serif;
+        font-size: 38px;
+        font-weight: 700;
+        color: white;
+      }
+    }
 
     .header-menue {
       display: flex;
